free: samples of how awesome it would look like if there was text

--- a/templates/admin/attest/overview.html
+++ b/templates/admin/attest/overview.html
@@ -6,7 +6,8 @@
 <div id="app">
     <p>
         Här kan du hitta alla kvitton som har delar som du får attestera,
-        klicka på ett kvitto för att komma till dess specifika vy.
+        klicka på ett kvitto för att komma till dess specifika vy. Endast
+        oflaggade kvitton förekommer.
     </p>
     <div class="select" style="float:right">
         <select v-model="cost_centre">
