--- a/templates/users/receipts.html
+++ b/templates/users/receipts.html
@@ -2,11 +2,11 @@
 {% load humanize %}
 
 {% block title %}{{ showuser.get_full_name }}{% endblock %}
-
 {% block content %}
+<div id="app">
     <h2>Ej attesterade kvitton </h2>
-    {% if non_attested_expenses %}
-        <table>
+    <label for="flagged" style="padding-right: 0.5em;">Visa endast flaggade</label><input v-model="flagged" type="checkbox" id="flagged" /><br />
+        <table v-if="non_attested_expenses.length > 0">
             <thead>
                 <tr>
                     <th class="left">ID</th>
@@ -14,21 +14,20 @@
                     <th>Skapat</th>
                     <th>Beskrivning</th>
                     <th>Summa</th>
+                    <th></th>
                 </tr>
             </thead>
-            {% for expense in non_attested_expenses %}
-                <tr>
-                    <td class="left">{{ expense.id }}</td>
-                    <td><a href="{% url 'expenses-show' expense.id %}">{{ expense.expense_date|date:"Y-m-d" }}</a></td>
-                    <td><a href="{% url 'expenses-show' expense.id %}">{{ expense.created_date|date:"Y-m-d" }}</a></td>
-                    <td><a href="{% url 'expenses-show' expense.id %}">{{ expense.description|capfirst }}</a></td>
-                    <td>{{ expense.total_amount|intcomma }} kr</td>
-                </tr>
-            {% endfor %}
+            <tr v-for="expense in non_attested_expenses" v-if="!flagged || expense.is_flagged">
+                <td class="left" v-text="expense.id"></td>
+                <td class="no-wrap"><a :href="'/expenses/' + expense.id + '/'" v-text="expense.expense_date"></a></td>  
+                <td><a :href="'/expenses/' + expense.id + '/'" v-text="expense.created_date"></a> </td>
+                <td><a :href="'/expenses/' + expense.id + '/'" v-text="capFirst(expense.description)"></a> </td>
+                <td v-text="intcomma(expense.amount)"></td>
+                <td class="right no-wrap">
+                    <span class="icon" v-if="expense.is_flagged===true" title="Flaggad"><i class="fa fa-flag" style="color: red"></i></span>
+                </td>
         </table>
-    {% else %}
-        Du har inga oattesterade kvitton!
-    {% endif %}
+        <p v-else>Du har inga oattesterade kvitton!</p>
     <br /><br />
     <h2>Attesterade kvitton</h2>
     {% if attested_expenses %}
@@ -91,5 +90,25 @@
     {% else %}
         Du har inga utbetalda kvitton.
     {% endif %}
+</div>
 
+<script type="text/javascript">
+    new Vue({
+        el: '#app',
+        data: function () {
+            return {
+                flagged: false,
+                non_attested_expenses: {% autoescape off %}{{ non_attested_expenses }}{% endautoescape %},
+            }
+        },
+        methods: {
+            intcomma(text){
+                return parseInt(text).toLocaleString("en")
+            },
+            capFirst(val) {
+                return String(val).charAt(0).toUpperCase() + String(val).slice(1);
+            },
+        },
+    })
+</script>
 {% endblock %}
