--- a/templates/admin/expenses/overview.html
+++ b/templates/admin/expenses/overview.html
@@ -62,6 +62,8 @@
                 {% for i in pages.custom_range %}
                     {% if i == '...' %}
                         <span>...</span>
+                    {% elif i == pages.number %}
+                        <a :href="'?page={{ i }}&cost_centre=' + cost_centre" {% if i == pages.number %} class="active"{% endif %}><b>{{i}}</b></a>
                     {% else %}
                         <a :href="'?page={{ i }}&cost_centre=' + cost_centre" {% if i == pages.number %} class="active"{% endif %}>{{i}}</a>
                     {% endif %}
@@ -76,6 +78,7 @@
             <input type="hidden" name="cost_centre" value="{{ cost_centre }}">
             <input type="number" name="page" min="1" max="{{ pages.paginator.num_pages }}" placeholder="Gå till sida" style="width:120px">
             <button type="submit">Kör</button>
+            <button type="button" v-on:click="goToRandomPage()" style="margin-left: 10px;">🎲 Slumpa</button>
         </form>
     <p v-else>Det finns inga kvitton.</p>
 </div>
@@ -108,6 +111,13 @@
             },
             capFirst(val) {
                 return String(val).charAt(0).toUpperCase() + String(val).slice(1);
+            },
+            goToRandomPage() {
+                const totalPages = {{ pages.num_pages|default:1 }};
+                const randomPage = Math.floor(Math.random() * totalPages) + 1;
+                const costCentre = encodeURIComponent("{{ cost_centre }}");
+                const url = `?page=${randomPage}&cost_centre=${costCentre}`;
+                window.location.href = url;
             },
         },
 
