Changes the wording to make it clearer
Co-authored-by: Mathias Magnusson <mathias@magnusson.space>

--- a/templates/expenses/show.html
+++ b/templates/expenses/show.html
@@ -229,7 +229,7 @@
                     <li><a href="#" v-on:click="send">Jag attesterar också detta.</a></li>
                     <li><a href="#" v-on:click="send">Det här har jag inte godkänt.</a></li>
                     <li><a href="#" v-on:click="send">Det här överskrider budgeten.</a></li>
-                    <li><a href="#" v-on:click="send">Ett kvitto per utlägg.</a></li>
+                    <li><a href="#" v-on:click="send">Varje kvitto ska laddas upp som ett eget utlägg på Cashflow.</a></li>
                     <li><a href="#" v-on:click="send">Du har angivit större belopp än vad som står på kvittot.</a></li>
                     <li><a href="#" v-on:click="send">Du måste ladda upp både en faktura och ett kontoutdrag.</a></li>
                     <li><a href="#" v-on:click="send">Avvakta med det här utlägget.</a></li>
