rename bookkeeping back to accounting
This helps consistency throughout the codebase and with existing Hive
permissions.

--- a/templates/admin/main.html
+++ b/templates/admin/main.html
@@ -44,7 +44,7 @@
                     </li>
                 {% endif %}
                 
-                {% if user.profile.may_view_bookkeepable %}
+                {% if user.profile.may_view_accountable %}
                     <li>
                         <a href="{% url 'admin-account' %}">
                             Bokför
