--- a/templates/invoices/edit.html
+++ b/templates/invoices/edit.html
@@ -122,6 +122,10 @@
                                     <option v-for="costCentre in costCentres.filter(c => c.CostCentreType == 'committee')"
                                             :key="costCentre.CostCentreID" v-bind:value="costCentre.CostCentreID+','+costCentre.CostCentreName" v-text="costCentre.CostCentreName"></option>
                                 </optgroup>
+                                <optgroup label="Partitioner">
+                                    <option v-for="costCentre in costCentres.filter(c => c.CostCentreType == 'partition')"
+                                            :key="costCentre.CostCentreID" v-bind:value="costCentre.CostCentreID+','+costCentre.CostCentreName" v-text="costCentre.CostCentreName"></option>
+                                </optgroup>
                                 <optgroup label="Projekt">
                                     <option v-for="costCentre in costCentres.filter(c => c.CostCentreType == 'project')"
                                             :key="costCentre.CostCentreID" v-bind:value="costCentre.CostCentreID+','+costCentre.CostCentreName" v-text="costCentre.CostCentreName"></option>
