--- a/templates/invoices/new.html
+++ b/templates/invoices/new.html
@@ -192,6 +192,14 @@
                                             v-bind:value="costCentre.CostCentreID+','+costCentre.CostCentreName"
                                         ></option>
                                     </optgroup>
+                                    <optgroup label="Partitioner">
+                                        <option
+                                            v-for="costCentre in costCentres.filter(c => c.CostCentreType == 'partition')"
+                                            :key="costCentre.CostCentreID"
+                                            v-text="costCentre.CostCentreName"
+                                            v-bind:value="costCentre.CostCentreID+','+costCentre.CostCentreName"
+                                        ></option>
+                                    </optgroup>
                                     <optgroup label="Projekt">
                                         <option
                                             v-for="costCentre in costCentres.filter(c => c.CostCentreType == 'project')"
@@ -202,7 +210,7 @@
                                     </optgroup>
                                     <optgroup label="Övrigt">
                                         <option
-                                            v-for="costCentre in costCentres.filter(c => c.CostCentreType != 'committee' && c.CostCentreType != 'project')"
+                                            v-for="costCentre in costCentres.filter(c => c.CostCentreType != 'committee' && c.CostCentreType != 'partition' && c.CostCentreType != 'project')"
                                             :key="costCentre.CostCentreID"
                                             v-text="costCentre.CostCentreName"
                                             v-bind:value="costCentre.CostCentreID+','+costCentre.CostCentreName"
