--- a/templates/expenses/new.html
+++ b/templates/expenses/new.html
@@ -129,6 +129,14 @@
                                         v-text="costCentre.CostCentreName"
                                     ></option>
                                 </optgroup>
+                                <optgroup label="Partitioner">
+                                    <option
+                                        v-for="costCentre in costCentres.filter(c => c.CostCentreType == 'partition')"
+                                        :key="costCentre.CostCentreID"
+                                        v-bind:value="costCentre.CostCentreID+','+costCentre.CostCentreName"
+                                        v-text="costCentre.CostCentreName"
+                                    ></option>
+                                </optgroup>
                                 <optgroup label="Projekt">
                                     <option
                                         v-for="costCentre in costCentres.filter(c => c.CostCentreType == 'project')"
@@ -139,7 +147,7 @@
                                 </optgroup>
                                 <optgroup label="Övrigt">
                                     <option
-                                        v-for="costCentre in costCentres.filter(c => c.CostCentreType != 'committee' && c.CostCentreType != 'project')"
+                                        v-for="costCentre in costCentres.filter(c => c.CostCentreType != 'committee' && c.CostCentreType != 'partition' && c.CostCentreType != 'project')"
                                         :key="costCentre.CostCentreID"
                                         v-bind:value="costCentre.CostCentreID+','+costCentre.CostCentreName"
                                         v-text="costCentre.CostCentreName"
