Update confirmation message in HTML template
Removed information about not saving digital receipts.

--- a/templates/expenses/confirmation.html
+++ b/templates/expenses/confirmation.html
@@ -5,7 +5,7 @@
 
 {% block full_content %}
     <div>
-        <p>Spara ditt kvitto ifall att bilden inte är tillräckligt bra eller att något behövs lämnas tillbaka. Om kvittot är digitalt behöver du inte spara kvittot förutom på Cashflow.</p>
+        <p>Spara ditt kvitto ifall att bilden inte är tillräckligt bra eller att något behövs lämnas tillbaka.</p>
         <a href="{% url "expenses-show" expense.pk %}" class="button primary-action btn-color theme-color" style="color:#fff">Gå vidare</a>
     </div>
 {% endblock %}
