--- a/templates/invoices/show.html
+++ b/templates/invoices/show.html
@@ -170,12 +170,12 @@
         <h2>Kommentarer</h2>
 
         <ul class="comments">
-            {% for comment in invoice.comment_set.all %}
-            <li class="clearfix {% if comment.author.user.username == user.username %}own{% endif %}">
+            {% for comment in comments %}
+            <li class="clearfix {% if comment.username == user.username %}own{% endif %}">
                 <div class="info">
-                    <a v-tooltip="{ content: '{{ comment.author.user.get_full_name }}' }" class="crop" style="background-image:url(https://zfinger.datasektionen.se/user/{{ comment.author.user.username }}/image);" href="/users/{{ comment.author.user.username }}"></a>
+                    <a v-tooltip="{ content: '{{ comment.full_name }}' }" class="crop" style="background-image:url({{ comment.picture }});" href="/users/{{ comment.username }}"></a>
                     <span class="name">
-                        <a href="{% url 'user-show' comment.author.user.username %}">
+                        <a href="{% url 'user-show' comment.username %}">
                             
                         </a>
                     </span>
