--- a/templates/users/main.html
+++ b/templates/users/main.html
@@ -14,9 +14,9 @@
 <div class="row">
 	<div class="col-sm-4 col-md-3">
 		<div id="secondary-nav" class="below-pic">
-			<div class="crop" style="background-image: url('https://zfinger.datasektionen.se/user/{{ showuser.username }}/image')"></div>
+            <div class="crop" style="background-image: url({{ picture }})"></div>
 			{% if showuser.username == user.username %}
-				<p style="font-size:0.8em;text-align: center;margin: 10px;">Du kan ändra bilden ovan på <a href="https://zfinger.datasektionen.se" class="primary-action">Z-finger</a>.</p>
+				<p style="font-size:0.8em;text-align: center;margin: 10px;">Du kan ändra bilden ovan på <a href="https://rfinger.datasektionen.se" class="primary-action">R-finger</a>.</p>
 			{% endif %}
 			<h3>{{ showuser.get_full_name }}</h3>
 		    <ul>
