feat(fortnox): add function to get all accounts

--- a/templates/admin/fortnox/overview.html
+++ b/templates/admin/fortnox/overview.html
@@ -12,4 +12,11 @@
     {% endif %}
 
 
+    <h2>Konton</h2>
+    {% for account in accounts %}
+    	<p>{{ account.Number }} - {{ account.Description }}</p>
+    {% endfor %}
+
+
+
 {% endblock %}
