feat(fortnox): add function for getting cost centers, add exception for permission denied

--- a/templates/admin/fortnox/overview.html
+++ b/templates/admin/fortnox/overview.html
@@ -17,6 +17,12 @@
     	<p>{{ account.Number }} - {{ account.Description }}</p>
     {% endfor %}
 
+    <h2>Kostnadsställen</h2>
+     {% for costcenter in costcenters %}
+     	<p>{{ costcenter.Code }} - {{ costcenter.Description }}</p>
+     {% endfor %}
+
+
 
 
 {% endblock %}
