feat(fortnox): minor tweaks and refactoring
- The `Fortnox` middleware now updates tokens in the database automatically
- View to disconnect from Fortnox
- Store full name of Fortnox user in DB
- More logging
- Better exception handling
- Clean up old migrations

--- a/templates/admin/fortnox/overview.html
+++ b/templates/admin/fortnox/overview.html
@@ -7,6 +7,7 @@
 
     {% if fortnox_user is not None %}
         <p>Du är inloggad som {{ fortnox_user.Name }}</p>
+        <a href={% url 'fortnox-disconnect' %}>Logga ut från Fortnox </a>
     {% else %}
         <a href={% url 'fortnox-auth-get' %}>Logga in på Fortnox</a>
     {% endif %}
